Edited style again

--- a/style2.css
+++ b/style2.css
@@ -28,7 +28,7 @@ div.menubar ul {
   top: 0;
   left: 0;
   width: 100%;
-	background-color: #C96F88;
+	background-color: #964A5F;
   /*background-color: #333;*/
 }
 
